Fix Scrollbar Styling

--- a/src/components/FishList/fishList.scss
+++ b/src/components/FishList/fishList.scss
@@ -27,9 +27,29 @@
         border-radius: 8px;
         overflow-y: auto;
 
+        &::-webkit-scrollbar {
+            border-radius: 8px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: #999999;
+            border: 4px solid transparent;
+            border-radius: 8px;
+            background-clip: padding-box; 
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            background-color: #777777;
+        }
+
         @include tablet {
             margin: $tablet-padding;
             padding: $tablet-padding;
+        }
+
+        @include desktop {
+            max-width: $desktop-maxwidth;
+            margin: 0 auto;
         }
     }
 
